src/main/java/eugenio/parser/LenguajeDeProgramacionParser.java
// Generated from LenguajeDeProgramacion.g4 by ANTLR 4.7.2
package eugenio.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LenguajeDeProgramacionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, VOID=4, PUEBLO=5, CASTILLO=6, MUNDO=7, REY=8, 
		VIVE=9, MUERE=10, DP=11, INVOCACION=12, FIN=13, SUBDITO=14, IF=15, ELSE=16, 
		ELSEIF=17, HECHIZO=18, TRUE=19, FALSE=20, INT=21, AND=22, OR=23, MAY=24, 
		MEN=25, MAYIGU=26, MENIGU=27, IGU=28, DIF=29, ID=30, SUM=31, RES=32, MUL=33, 
		DIV=34, STRING=35, ESPACIOS=36, LINEA=37, BLOQUE=38;
	public static final int
		RULE_programa = 0, RULE_clase = 1, RULE_encabezado = 2, RULE_cierremetodo = 3, 
		RULE_cierreclase = 4, RULE_tipodereturn = 5, RULE_contenido = 6, RULE_imprimir = 7, 
		RULE_impresiones = 8, RULE_declarar = 9, RULE_declararasignar = 10, RULE_tipodato = 11, 
		RULE_asignar = 12, RULE_condicional = 13, RULE_condicion = 14, RULE_sino = 15, 
		RULE_sinoentonces = 16, RULE_expr = 17, RULE_mientras = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "clase", "encabezado", "cierremetodo", "cierreclase", "tipodereturn", 
			"contenido", "imprimir", "impresiones", "declarar", "declararasignar", 
			"tipodato", "asignar", "condicional", "condicion", "sino", "sinoentonces", 
			"expr", "mientras"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'('", "')'", "'verdugo'", "'pueblo'", "'castillo'", "'mundo'", 
			"'rey'", "'['", "']'", "':'", "'invocacion'", "'!'", "'subdito'", "'juicio'", 
			"'ejecucion'", "'sentencia'", "'hechizo'", "'cuerdo'", "'loco'", null, 
			"'&&'", "'||'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", null, "'+'", 
			"'-'", "'*'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "VOID", "PUEBLO", "CASTILLO", "MUNDO", "REY", 
			"VIVE", "MUERE", "DP", "INVOCACION", "FIN", "SUBDITO", "IF", "ELSE", 
			"ELSEIF", "HECHIZO", "TRUE", "FALSE", "INT", "AND", "OR", "MAY", "MEN", 
			"MAYIGU", "MENIGU", "IGU", "DIF", "ID", "SUM", "RES", "MUL", "DIV", "STRING", 
			"ESPACIOS", "LINEA", "BLOQUE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LenguajeDeProgramacion.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LenguajeDeProgramacionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public ClaseContext clase() {
			return getRuleContext(ClaseContext.class,0);
		}
		public EncabezadoContext encabezado() {
			return getRuleContext(EncabezadoContext.class,0);
		}
		public ContenidoContext contenido() {
			return getRuleContext(ContenidoContext.class,0);
		}
		public CierremetodoContext cierremetodo() {
			return getRuleContext(CierremetodoContext.class,0);
		}
		public CierreclaseContext cierreclase() {
			return getRuleContext(CierreclaseContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDeProgramacionVisitor ) return ((LenguajeDeProgramacionVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			clase();
			setState(39);
			encabezado();
			setState(40);
			contenido();
			setState(41);
			cierremetodo();
			setState(42);
			cierreclase();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClaseContext extends ParserRuleContext {
		public ClaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clase; }
	 
		public ClaseContext() { }
		public void copyFrom(ClaseContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EncabezadoclaseContext extends ClaseContext {
		public TerminalNode PUEBLO() { return getToken(LenguajeDeProgramacionParser.PUEBLO, 0); }
		public TerminalNode CASTILLO() { return getToken(LenguajeDeProgramacionParser.CASTILLO, 0); }
		public TerminalNode ID() { return getToken(LenguajeDeProgramacionParser.ID, 0); }
		public TerminalNode VIVE() { return getToken(LenguajeDeProgramacionParser.VIVE, 0); }
		public EncabezadoclaseContext(ClaseContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDeProgramacionVisitor ) return ((LenguajeDeProgramacionVisitor<? extends T>)visitor).visitEncabezadoclase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClaseContext clase() throws RecognitionException {
		ClaseContext _localctx = new ClaseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_clase);
		try {
			_localctx = new EncabezadoclaseContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(PUEBLO);
			setState(45);
			match(CASTILLO);
			setState(46);
			match(ID);
			setState(47);
			match(VIVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EncabezadoContext extends ParserRuleContext {
		public TerminalNode PUEBLO() { return getToken(LenguajeDeProgramacionParser.PUEBLO, 0); }
		public TipodereturnContext tipodereturn() {
			return getRuleContext(TipodereturnContext.class,0);
		}
		public TerminalNode REY() { return getToken(LenguajeDeProgramacionParser.REY, 0); }
		public List<TerminalNode> DP() { return getTokens(LenguajeDeProgramacionParser.DP); }
		public TerminalNode DP(int i) {
			return getToken(LenguajeDeProgramacionParser.DP, i);
		}
		public TerminalNode VIVE() { return getToken(LenguajeDeProgramacionParser.VIVE, 0); }
		public EncabezadoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_encabezado; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDeProgramacionVisitor ) return ((LenguajeDeProgramacionVisitor<? extends T>)visitor).visitEncabezado(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EncabezadoContext encabezado() throws RecognitionException {
		EncabezadoContext _localctx = new EncabezadoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_encabezado);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(PUEBLO);
			setState(50);
			tipodereturn();
			setState(51);
			match(REY);
			setState(52);
			match(DP);
			setState(53);
			match(DP);
			setState(54);
			match(VIVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CierremetodoContext extends ParserRuleContext {
		public CierremetodoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cierremetodo; }
	 
		public CierremetodoContext() { }
		public void copyFrom(CierremetodoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CerrarmetodoContext extends CierremetodoContext {
		public TerminalNode MUERE() { return getToken(LenguajeDeProgramacionParser.MUERE, 0); }
		public CerrarmetodoContext(CierremetodoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDeProgramacionVisitor ) return ((LenguajeDeProgramacionVisitor<? extends T>)visitor).visitCerrarmetodo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CierremetodoContext cierremetodo() throws RecognitionException {
		CierremetodoContext _localctx = new CierremetodoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cierremetodo);
		try {
			_localctx = new CerrarmetodoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(MUERE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CierreclaseContext extends ParserRuleContext {
		public CierreclaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cierreclase; }
	 
		public CierreclaseContext() { }
		public void copyFrom(CierreclaseContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CerrarclaseContext extends CierreclaseContext {
		public TerminalNode MUERE() { return getToken(LenguajeDeProgramacionParser.MUERE, 0); }
		public CerrarclaseContext(CierreclaseContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDeProgramacionVisitor ) return ((LenguajeDeProgramacionVisitor<? extends T>)visitor).visitCerrarclase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CierreclaseContext cierreclase() throws RecognitionException {
		CierreclaseContext _localctx = new CierreclaseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cierreclase);
		try {
			_localctx = new CerrarclaseContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(MUERE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipodereturnContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(LenguajeDeProgramacionParser.VOID, 0); }
		public TipodereturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipodereturn; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDeProgramacionVisitor ) return ((LenguajeDeProgramacionVisitor<? extends T>)visitor).visitTipodereturn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipodereturnContext tipodereturn() throws RecognitionException {
		TipodereturnContext _localctx = new TipodereturnContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tipodereturn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(VOID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContenidoContext extends ParserRuleContext {
		public List<ImprimirContext> imprimir() {
			return getRuleContexts(ImprimirContext.class);
		}
		public ImprimirContext imprimir(int i) {
			return getRuleContext(ImprimirContext.class,i);
		}
		public List<DeclararContext> declarar() {
			return getRuleContexts(DeclararContext.class);
		}
		public DeclararContext declarar(int i) {
			return getRuleContext(DeclararContext.class,i);
		}
		public List<AsignarContext> asignar() {
			return getRuleContexts(AsignarContext.class);
		}
		public AsignarContext asignar(int i) {
			return getRuleContext(AsignarContext.class,i);
		}
		public List<DeclararasignarContext> declararasignar() {
			return getRuleContexts(DeclararasignarContext.class);
		}
		public DeclararasignarContext declararasignar(int i) {
			return getRuleContext(DeclararasignarContext.class,i);
		}
		public List<CondicionalContext> condicional() {
			return getRuleContexts(CondicionalContext.class);
		}
		public CondicionalContext condicional(int i) {
			return getRuleContext(CondicionalContext.class,i);
		}
		public List<MientrasContext> mientras() {
			return getRuleContexts(MientrasContext.class);
		}
		public MientrasContext mientras(int i) {
			return getRuleContext(MientrasContext.class,i);
		}
		public ContenidoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contenido; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDeProgramacionVisitor ) return ((LenguajeDeProgramacionVisitor<? extends T>)visitor).visitContenido(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContenidoContext contenido() throws RecognitionException {
		ContenidoContext _localctx = new ContenidoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_contenido);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INVOCACION) | (1L << SUBDITO) | (1L << IF) | (1L << HECHIZO) | (1L << ID))) != 0)) {
				{
				setState(68);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(62);
					imprimir();
					}
					break;
				case 2:
					{
					setState(63);
					declarar();
					}
					break;
				case 3:
					{
					setState(64);
					asignar();
					}
					break;
				case 4:
					{
					setState(65);
					declararasignar();
					}
					break;
				case 5:
					{
					setState(66);
					condicional();
					}
					break;
				case 6:
					{
					setState(67);
					mientras();
					}
					break;
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImprimirContext extends ParserRuleContext {
		public ImprimirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imprimir; }
	 
		public ImprimirContext() { }
		public void copyFrom(ImprimirContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImpresionContext extends ImprimirContext {
		public TerminalNode INVOCACION() { return getToken(LenguajeDeProgramacionParser.INVOCACION, 0); }
		public List<TerminalNode> DP() { return getTokens(LenguajeDeProgramacionParser.DP); }
		public TerminalNode DP(int i) {
			return getToken(LenguajeDeProgramacionParser.DP, i);
		}
		public TerminalNode FIN() { return getToken(LenguajeDeProgramacionParser.FIN, 0); }
		public ImpresionesContext impresiones() {
			return getRuleContext(ImpresionesContext.class,0);
		}
		public ImpresionContext(ImprimirContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDeProgramacionVisitor ) return ((LenguajeDeProgramacionVisitor<? extends T>)visitor).visitImpresion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImprimirContext imprimir() throws RecognitionException {
		ImprimirContext _localctx = new ImprimirContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_imprimir);
		int _la;
		try {
			_localctx = new ImpresionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(INVOCACION);
			setState(74);
			match(DP);
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << INT) | (1L << ID) | (1L << RES) | (1L << STRING))) != 0)) {
				{
				setState(75);
				impresiones();
				}
			}

			setState(78);
			match(DP);
			setState(79);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImpresionesContext extends ParserRuleContext {
		public ImpresionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impresiones; }
	 
		public ImpresionesContext() { }
		public void copyFrom(ImpresionesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImprimirexprContext extends ImpresionesContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ImprimirexprContext(ImpresionesContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDeProgramacionVisitor ) return ((LenguajeDeProgramacionVisitor<? extends T>)visitor).visitImprimirexpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ImprimirstringContext extends ImpresionesContext {
		public TerminalNode STRING() { return getToken(LenguajeDeProgramacionParser.STRING, 0); }
		public ImprimirstringContext(ImpresionesContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDeProgramacionVisitor ) return ((LenguajeDeProgramacionVisitor<? extends T>)visitor).visitImprimirstring(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImpresionesContext impresiones() throws RecognitionException {
		ImpresionesContext _localctx = new ImpresionesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_impresiones);
		try {
			setState(83);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case INT:
			case ID:
			case RES:
				_localctx = new ImprimirexprContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				expr(0);
				}
				break;
			case STRING:
				_localctx = new ImprimirstringContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclararContext extends ParserRuleContext {
		public DeclararContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarar; }
	 
		public DeclararContext() { }
		public void copyFrom(DeclararContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclaracionContext extends DeclararContext {
		public TipodatoContext tipodato() {
			return getRuleContext(TipodatoContext.class,0);
		}
		public TerminalNode ID() { return getToken(LenguajeDeProgramacionParser.ID, 0); }
		public TerminalNode FIN() { return getToken(LenguajeDeProgramacionParser.FIN, 0); }
		public DeclaracionContext(DeclararContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDeProgramacionVisitor ) return ((LenguajeDeProgramacionVisitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclararContext declarar() throws RecognitionException {
		DeclararContext _localctx = new DeclararContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_declarar);
		try {
			_localctx = new DeclaracionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			tipodato();
			setState(86);
			match(ID);
			setState(87);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclararasignarContext extends ParserRuleContext {
		public DeclararasignarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declararasignar; }
	 
		public DeclararasignarContext() { }
		public void copyFrom(DeclararasignarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclasignarContext extends DeclararasignarContext {
		public TipodatoContext tipodato() {
			return getRuleContext(TipodatoContext.class,0);
		}
		public TerminalNode ID() { return getToken(LenguajeDeProgramacionParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode FIN() { return getToken(LenguajeDeProgramacionParser.FIN, 0); }
		public DeclasignarContext(DeclararasignarContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDeProgramacionVisitor ) return ((LenguajeDeProgramacionVisitor<? extends T>)visitor).visitDeclasignar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclararasignarContext declararasignar() throws RecognitionException {
		DeclararasignarContext _localctx = new DeclararasignarContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_declararasignar);
		try {
			_localctx = new DeclasignarContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			tipodato();
			setState(90);
			match(ID);
			setState(91);
			match(T__0);
			setState(92);
			expr(0);
			setState(93);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipodatoContext extends ParserRuleContext {
		public TerminalNode SUBDITO() { return getToken(LenguajeDeProgramacionParser.SUBDITO, 0); }
		public TipodatoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipodato; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDeProgramacionVisitor ) return ((LenguajeDeProgramacionVisitor<? extends T>)visitor).visitTipodato(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipodatoContext tipodato() throws RecognitionException {
		TipodatoContext _localctx = new TipodatoContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_tipodato);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(SUBDITO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignarContext extends ParserRuleContext {
		public AsignarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignar; }
	 
		public AsignarContext() { }
		public void copyFrom(AsignarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AsignacionContext extends AsignarContext {
		public TerminalNode ID() { return getToken(LenguajeDeProgramacionParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode FIN() { return getToken(LenguajeDeProgramacionParser.FIN, 0); }
		public AsignacionContext(AsignarContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDeProgramacionVisitor ) return ((LenguajeDeProgramacionVisitor<? extends T>)visitor).visitAsignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignarContext asignar() throws RecognitionException {
		AsignarContext _localctx = new AsignarContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_asignar);
		try {
			_localctx = new AsignacionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(ID);
			setState(98);
			match(T__0);
			setState(99);
			expr(0);
			setState(100);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionalContext extends ParserRuleContext {
		public CondicionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicional; }
	 
		public CondicionalContext() { }
		public void copyFrom(CondicionalContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CondicionalesContext extends CondicionalContext {
		public TerminalNode IF() { return getToken(LenguajeDeProgramacionParser.IF, 0); }
		public List<TerminalNode> DP() { return getTokens(LenguajeDeProgramacionParser.DP); }
		public TerminalNode DP(int i) {
			return getToken(LenguajeDeProgramacionParser.DP, i);
		}
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode VIVE() { return getToken(LenguajeDeProgramacionParser.VIVE, 0); }
		public ContenidoContext contenido() {
			return getRuleContext(ContenidoContext.class,0);
		}
		public TerminalNode MUERE() { return getToken(LenguajeDeProgramacionParser.MUERE, 0); }
		public SinoContext sino() {
			return getRuleContext(SinoContext.class,0);
		}
		public SinoentoncesContext sinoentonces() {
			return getRuleContext(SinoentoncesContext.class,0);
		}
		public CondicionalesContext(CondicionalContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDeProgramacionVisitor ) return ((LenguajeDeProgramacionVisitor<? extends T>)visitor).visitCondicionales(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionalContext condicional() throws RecognitionException {
		CondicionalContext _localctx = new CondicionalContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_condicional);
		try {
			_localctx = new CondicionalesContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(IF);
			setState(103);
			match(DP);
			setState(104);
			condicion(0);
			setState(105);
			match(DP);
			setState(106);
			match(VIVE);
			setState(107);
			contenido();
			setState(108);
			match(MUERE);
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ELSE:
				{
				setState(109);
				sino();
				}
				break;
			case ELSEIF:
				{
				setState(110);
				sinoentonces();
				}
				break;
			case MUERE:
			case INVOCACION:
			case SUBDITO:
			case IF:
			case HECHIZO:
			case ID:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
